// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should inform if the actual value is less than 1% of the target value 1`] = `
<span
  dangerouslySetInnerHTML={
    Object {
      "__html": "target duration: 10000ms<br/>actual duration: 1ms<br/>< 1% of the target value",
    }
  }
/>
`;

exports[`should show a tooltip with information about actual and target value 1`] = `
<span
  dangerouslySetInnerHTML={
    Object {
      "__html": "target duration: 1ms<br/>actual duration: 2ms<br/>200% of the target value",
    }
  }
/>
`;

exports[`should show a tooltip with information if no actual value is available 1`] = `
<span
  dangerouslySetInnerHTML={
    Object {
      "__html": "target duration: 1ms<br/>No actual value available.<br/>Cannot compare target and actual value.",
    }
  }
/>
`;
